# cookiecutter-templates

python-app/python-{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml
python-app/python-{{ cookiecutter.project_slug }}/make/: arch.mk
python-app/python-{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: main.py
python-project/: cookiecutter.json
python-project/hooks/: post_gen_project.sh
python-project/python-{{ cookiecutter.project_slug }}/: README.md
python-project/python-{{ cookiecutter.project_slug }}/make/: poetry.mk
python-project/python-{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
